<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/box"
            android:background="@drawable/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_margin="16dp"
                app:cardCornerRadius="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvExibeResposta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:padding="16dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Resultado" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvEntradaDados"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="17dp"
                        android:padding="16dp"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvExibeResposta"
                        tools:text="Entrada" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="MissingConstraints">

                <Button
                    android:id="@+id/btDelAll"
                    style="@style/style_by_long"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/value_button_c"
                    app:backgroundTint="@color/background_button_clean"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btDelLast"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_conversion_absoluteHeight="60dp"
                    tools:layout_conversion_absoluteWidth="177dp" />

                <ImageButton
                    android:id="@+id/btDelLast"
                    style="@style/style_by_long"
                    android:layout_width="0dp"
                    android:layout_height="0.3in"
                    android:layout_marginBottom="24dp"
                    android:background="@color/background_button_clean"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btDelAll"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/in_backspace"
                    tools:ignore="VectorDrawableCompat"
                    tools:layout_conversion_absoluteHeight="60dp"
                    tools:layout_conversion_absoluteWidth="554dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                tools:ignore="MissingConstraints">

                <Button
                    android:id="@+id/bt1"
                    style="@style/style_by_skinny"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:text="@string/value_button_1"
                    app:backgroundTint="@color/background_button_number"
                    app:layout_constraintBaseline_toBaselineOf="@+id/bt2"
                    app:layout_constraintEnd_toStartOf="@+id/bt2"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/bt2"
                    style="@style/style_by_skinny"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:text="@string/value_button_2"
                    app:backgroundTint="@color/background_button_number"
                    app:layout_constraintEnd_toStartOf="@+id/bt3"
                    app:layout_constraintStart_toEndOf="@+id/bt1" />

                <Button
                    android:id="@+id/bt3"
                    style="@style/style_by_skinny"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:text="@string/value_button_3"
                    app:backgroundTint="@color/background_button_number"
                    app:layout_constraintBaseline_toBaselineOf="@+id/bt2"
                    app:layout_constraintEnd_toStartOf="@+id/btMultiplicacao"
                    app:layout_constraintStart_toEndOf="@+id/bt2" />

                <Button
                    android:id="@+id/btMultiplicacao"
                    style="@style/style_by_fat"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:text="@string/value_button_multiplication"
                    app:backgroundTint="@color/background_button_simbol"
                    app:layout_constraintBaseline_toBaselineOf="@+id/bt3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/bt3" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                tools:ignore="MissingConstraints">

                <Button
                    android:id="@+id/bt4"
                    style="@style/style_by_skinny"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:text="@string/value_button_4"
                    app:backgroundTint="@color/background_button_number"
                    app:layout_constraintBaseline_toBaselineOf="@+id/bt5"
                    app:layout_constraintEnd_toStartOf="@+id/bt5"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/bt5"
                    style="@style/style_by_skinny"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:text="@string/value_button_5"
                    app:backgroundTint="@color/background_button_number"
                    app:layout_constraintEnd_toStartOf="@+id/bt6"
                    app:layout_constraintStart_toEndOf="@+id/bt4" />

                <Button
                    android:id="@+id/bt6"
                    style="@style/style_by_skinny"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:text="@string/value_button_6"
                    app:backgroundTint="@color/background_button_number"
                    app:layout_constraintBaseline_toBaselineOf="@+id/bt5"
                    app:layout_constraintEnd_toStartOf="@+id/btDivisao"
                    app:layout_constraintStart_toEndOf="@+id/bt5" />

                <Button
                    android:id="@+id/btDivisao"
                    style="@style/style_by_fat"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:text="@string/value_button_division"
                    app:backgroundTint="@color/background_button_simbol"
                    app:layout_constraintBaseline_toBaselineOf="@+id/bt6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/bt6" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <Button
                    android:id="@+id/bt7"
                    style="@style/style_by_skinny"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:text="@string/value_button_7"
                    app:backgroundTint="@color/background_button_number"
                    app:layout_constraintBaseline_toBaselineOf="@+id/bt8"
                    app:layout_constraintEnd_toStartOf="@+id/bt8"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/bt8"
                    style="@style/style_by_skinny"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:text="@string/value_button_8"
                    app:backgroundTint="@color/background_button_number"
                    app:layout_constraintEnd_toStartOf="@+id/bt9"
                    app:layout_constraintStart_toEndOf="@+id/bt7" />

                <Button
                    android:id="@+id/bt9"
                    style="@style/style_by_skinny"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:text="@string/value_button_9"
                    app:backgroundTint="@color/background_button_number"
                    app:layout_constraintBaseline_toBaselineOf="@+id/bt8"
                    app:layout_constraintEnd_toStartOf="@+id/btSubtracao"
                    app:layout_constraintStart_toEndOf="@+id/bt8" />

                <Button
                    android:id="@+id/btSubtracao"
                    style="@style/style_by_fat"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:text="@string/value_button_subtraction"
                    app:backgroundTint="@color/background_button_simbol"
                    app:layout_constraintBaseline_toBaselineOf="@+id/bt9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/bt9" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                tools:ignore="MissingConstraints">

                <Button
                    android:id="@+id/btVirgula"
                    style="@style/style_by_skinny"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:text="@string/value_button_dot"
                    app:backgroundTint="@color/background_button_simbol"
                    app:layout_constraintBaseline_toBaselineOf="@+id/bt0"
                    app:layout_constraintEnd_toStartOf="@+id/bt0"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/bt0"
                    style="@style/style_by_skinny"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:text="@string/value_button_0"
                    app:backgroundTint="@color/background_button_number"
                    app:layout_constraintEnd_toStartOf="@+id/btCalcular"
                    app:layout_constraintStart_toEndOf="@+id/btVirgula" />

                <Button
                    android:id="@+id/btCalcular"
                    style="@style/style_by_skinny"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:text="@string/value_button_equals"
                    app:backgroundTint="@color/background_button_equals"
                    app:layout_constraintBaseline_toBaselineOf="@+id/bt0"
                    app:layout_constraintEnd_toStartOf="@+id/btSoma"
                    app:layout_constraintStart_toEndOf="@+id/bt0" />

                <Button
                    android:id="@+id/btSoma"
                    style="@style/style_by_fat"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:text="@string/value_button_plus"
                    app:backgroundTint="@color/background_button_simbol"
                    app:layout_constraintBaseline_toBaselineOf="@+id/btCalcular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btCalcular" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</layout>